--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@capacitor/app": "1.0.0",
+    "@capacitor/browser": "^1.0.0",
+    "@capacitor/camera": "^1.0.0",
     "@capacitor/core": "3.0.0",
+    "@capacitor/geolocation": "^1.0.0",
     "@capacitor/haptics": "1.0.0",
     "@capacitor/keyboard": "1.0.0",
+    "@capacitor/storage": "^1.0.0",
+    "@ionic/pwa-elements": "^3.0.2",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
+    "ionicons": "^5.5.1",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0"
   },
